--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,8 @@
 
 org.gradle.configuration-cache=true
 android.useAndroidX=true
+
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.caching=true
