--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -14,6 +14,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      id-token: write
     
     steps:
       - name: Checkout code
@@ -86,6 +89,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
+          token: ${{ secrets.RELEASE_TOKEN }}
           tag_name: ${{ steps.version.outputs.version }}
           name: Release ${{ steps.version.outputs.version }}
           body: |
@@ -100,8 +104,8 @@ jobs:
           prerelease: false
           files: |
             ${{ steps.rename.outputs.apk_path }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          generate_release_notes: false
+          make_latest: true
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
